Ajusta débitos sonar.